<resources>
    <string name="app_name">39医生工作站</string>
    <string name="loading_data">数据加载中&#8230;</string>
    <string name="loading">加载中&#8230;</string>
    <string name="downloading">下载中&#8230;</string>
    <string name="load_data_faild">数据加载失败,请重试</string>
    <string name="no_network_connection">网络环境不稳定，请重试</string>
    <string name="request_connection_fail">服务器忙</string>
    <string name="request_parse_fail">结果解析失败</string>
    <string name="request_auth_code_error">鉴权值已过期</string>
    <string name="sdcard_unable">SD卡不可用</string>
    <string name="apply_appointment_permission_setting_tip">您的录音权限被禁止,请进入系统设置开启录音权限并重启大医生</string>
    <string name="file_uploading">文件上传中&#8230;</string>
    <string name="file_upload_faild">文件上传失败,请重试</string>
    <string name="data_uploading">数据上传中&#8230;</string>
    <string name="data_committing">正在提交&#8230;</string>
    <string name="data_upload_faild">数据上传失败,请重试</string>
    <string name="immediately_enter">立即进入</string>
    <string name="add_succeed_tips">添加成功</string>
    <string name="unit_money_rmb">元</string>
    <string name="unit_individual">个</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="info_birthday">生日</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="login_phone_num">手机号码</string>
    <string name="login_password">密&#160;码</string>
    <string name="login_login">登&#160;录</string>
    <string name="login_login_go">登录中&#8230;&#8230;</string>
    <string name="login_message_login">短信登录</string>
    <string name="login_register">注册</string>
    <string name="login_found_password">找回密码</string>
    <string name="login_found_password_ques">找回密码?</string>
    <string name="login_message_password">账号登录</string>
    <string name="login_message_send_code_count_down">%1$d秒后重发</string>
    <string name="login_message_again_send_code">重新\n获取验证码</string>
    <string name="login_message_send_code_success">获取验证码成功</string>
    <string name="login_message_code_empty_tip">请输入验证码</string>
    <string name="login_message_code_error_tip">您输入的验证码不正确</string>
    <string name="change_password_input_new_password">请输入新密码</string>
    <string name="change_password_password_too_short">密码不足6位</string>
    <string name="change_password_again_input_password">请再次输入密码</string>
    <string name="change_password_diff_password">两次密码不一致</string>
    <string name="change_password_code_empty_tip">请输入验证码进行重置密码</string>
    <string name="change_password_success">修改成功</string>
    <string name="set_new_password_hint">设置新密码</string>
    <string name="set_new_password_again_hint">重复新密码</string>
    <string name="reset_and_register">重置并登录</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="home_title">39互联网医院</string>
    <string name="home_remote_consult">视频会诊</string>
    <string name="home_data_manage">资料管理</string>
    <string name="home_consult">就诊</string>
    <string name="home_consult_history">历史就诊</string>
    <string name="home_message_null">暂无消息</string>
    <string name="home_todo">待办事项</string>
    <string name="home_todo_empty">暂无待办事项</string>
    <string name="home_appoint_list">预约列表</string>
    <string name="home_recommend_expert">推荐专家</string>
    <string name="message_list">消息列表</string>
    <string name="message_read_all">全部已读</string>
    <string name="press_again_back_home">再按一次返回键回到桌面</string>
    <string name="user_show_section_appoint">显示科室预约</string>
    <string name="appoint_state_communicating">分诊中</string>
    <string name="appoint_state_wait_pay">等待支付</string>
    <string name="appoint_state_wait_communication">等待沟通</string>
    <string name="appoint_state_pay_timeout">支付超时</string>
    <string name="appoint_state_check_report">查看报告</string>
    <string name="appoint_state_close">就诊关闭</string>
    <string name="appoint_state_complete">就诊完成</string>
    <string name="appoint_state_all_complete">全部完成</string>
    <string name="appoint_action_give_advice">出具医嘱</string>
    <string name="appoint_action_view_record">查看病历</string>
    <string name="appoint_action_manage_data">管理资料</string>
    <string name="appoint_action_enter_the_consulting_room">进入诊室</string>
    <string name="appoint_action_no_state">未知状态</string>
    <string name="service_type_remote_consult">远程会诊</string>
    <string name="service_type_remote_advice">远程咨询</string>
    <string name="service_type_remote_outpatient">远程门诊</string>
    <string name="service_type_remote_wards">远程查房</string>
    <string name="service_type_remote_image_consult">远程影像会诊</string>
    <string name="bottom_home_btn">39医院</string>
    <string name="bottom_user_center_btn">个人中心</string>
    <string name="bottom_doctor_btn">名医在</string>
    <string name="bottom_medical_college">医学院</string>
    <string name="action_bar_cancel">取消</string>
    <string name="action_bar_ok">完成</string>
    <string name="appoint_screen">筛选</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="waiting_for_video">等待视频</string>
    <string name="waiting_for_advice">等待医嘱</string>
    <string name="report_trim">报告整理</string>
    <string name="time_description_application">申请时间:</string>
    <string name="time_description_predict">预计时间:</string>
    <string name="time_description_finished">完成时间:</string>
    <string name="common_space">&#160;</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="message_balance_change">余额变更</string>
    <string name="message_withdraw">提现到账</string>
    <string name="message_appointment_today">今日预约</string>
    <string name="message_39_activity">39活动</string>
    <string name="message_balance_change_tips">您的账户余额有变更</string>
    <string name="message_withdraw_tips">您申请的提现金额已到账</string>
    <string name="message_appointment_today_tips">今日您有%1$s个预约就诊</string>
    <string name="message_center_delete_message">删除此消息</string>
    <string name="message_new_message_notice_tips">您有一条新的消息，39互联网医院</string>
    <string name="history_record">历史记录</string>
    <string name="sure_delete_title">确认删除</string>
    <string name="sure_delete_message">确认删除历史搜索记录？</string>
    <string name="pdfvp_ready_to_download">即将加载</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="button_ok">OK</string>
</resources>