<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="cn.longmaster.hospital.doctor.ui.LoginActivity">

    <cn.longmaster.hospital.doctor.view.MyStatusBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <ImageView
        android:id="@+id/activity_login_version_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@mipmap/bg_logo_for_login" />

    <TextView
        android:id="@+id/activity_login_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/font_size_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/bg_input_arc"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_login_account" />

        <EditText
            android:id="@+id/activity_login_phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@null"
            android:hint="@string/login_phone_num"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_b2b2b2"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/bg_input_arc"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_login_password" />

        <EditText
            android:id="@+id/activity_login_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@null"
            android:hint="@string/login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_b2b2b2"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

    <cn.longmaster.hospital.doctor.view.LoadingButton
        android:id="@+id/activity_login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/bg_btn_yellow_arc"
        app:pbLoadingText="@string/login_login_go"
        app:pbText="@string/login_login"
        app:pbTextColor="@color/white"
        app:pbTextSize="@dimen/font_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_login_message_login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/login_message_login"
            android:textColor="@color/text_color_7d666666_45aef8"
            android:textSize="@dimen/font_size_12" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/color_cccccc" />

        <TextView
            android:id="@+id/activity_login_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/login_register"
            android:textColor="@color/text_color_7d666666_45aef8"
            android:textSize="@dimen/font_size_12" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/color_cccccc" />

        <TextView
            android:id="@+id/activity_login_found_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/login_found_password_ques"
            android:textColor="@color/text_color_7d666666_45aef8"
            android:textSize="@dimen/font_size_12" />
    </LinearLayout>
</LinearLayout>
